<resources>
    <string name="app_name">Coup de patte</string>
    <string name="action_settings">Settings</string>

    <!--  MAIN -->
    <string name="registration">INSCRIPTION</string>
    <string name="connection">CONNEXION</string>
    <string name="email_hint">ADRESSE EMAIL</string>
    <string name="pswd_hint">MOT DE PASSE</string>
    <string name="next">Continuer</string>
    <string name="btn_new_user"><u>Nouveau ? S\'inscrire</u></string>

    <!-- SIGNUP -->
    <string name="pseudo">PSEUDO</string>
    <string name="phone_number">NUMÉRO DE TÉLÉPHONE</string>
    <string name="location">VILLE</string>
    <string name="register">S\'inscrire</string>
    <string name="already_user"><u>J\'ai déjà un compte</u></string>
    <string name="dog">CHIEN</string>
    <string name="cat">CHAT</string>
    <string name="upload">VOTRE PHOTO</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_signup">Signup</string>

    <!-- BDD USER -->
    <string name="username1">Charlotte</string>
    <string name="userlocation">Aix-en-Provence (13)</string>


    <!-- BDD PET -->
    <string name="favoritedog">Préférence pour les chiens</string>
    <string name="favoritecat">Préférence pour les chats</string>

    <!-- pet's name -->
    <string name="petname1">Youpi</string>
    <string name="petname2">Chapie</string>
    <string name="petname3">Georges</string>
    <string name="petname4">Woofie</string>
    <string name="petname5">Nabu</string>
    <string name="petname6">Akis</string>
    <string name="petname7">Djobi</string>
    <string name="petname8">Djoba</string>
    <string name="petname9">Néo</string>
    <string name="petname10">Paki</string>
    <string name="petname11">Snow</string>
    <string name="petname12">Pacca</string>
    <string name="petname13">Bacchus</string>
    <string name="title_activity_user_dog_profile">userDogProfile</string>

    <!-- pet's race -->
    <string name="petrace1">Golden Retriever</string>

    <!-- dog profile -->
    <string name="petbirthday">2 ans</string>
    <string name="petgender">Femelle</string>
    <string name="petsize">Élancée</string>
    <string name="pettemper">Sociable et tendre</string>
    <string name="petrace">Chien Bouvier bernois</string>
    <string name="interested">4 intéressés</string>

    <!-- BDD REFUGE -->
    <string name="refuge_name"><u>Refuge de "Menois"</u></string>
    <string name="refuge_name_upcase">REFUGE DE "MENOIS"</string>
    <string name="title_activity_user_refuge">UserRefuge</string>
    <string name="refuge_address">Route de Baires</string>
    <string name="refuge_city">10410 Saint Parres aux Tertres</string>
    <string name="refuge_schedule">Ouvert tous les jours de 9:00 à 19:30</string>
    <string name="refuge_mail">stparreauxtertres@la-spa.fr</string>
    <string name="title_activity_user_snap">UserSnap</string>


    <!-- BDD SNAP -->
    <string name="new_pet_snap">Un nouvel arrivant au refuge, il s\'appelle Bacchus et est en forme !</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
</resources>
