<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/register_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="#ffffff"
        android:alpha="0.7"
        android:textSize="16sp"
        android:layout_marginTop="31dp"
        android:letterSpacing="0.1"
        android:gravity="center"
        android:id="@+id/textView" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView">
        <View
            android:id="@+id/myRectangleView"
            android:layout_width="181dp"
            android:layout_height="2dp"
            android:background="@drawable/rectangle">
        </View>
    </RelativeLayout>

    <EditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColorHint="#fff"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        android:textColor="#fff"
        android:alpha="0.7"
        android:letterSpacing="0.1"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginLeft="30dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_inscription_mail"
        android:id="@+id/imageView"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/relativeLayout"/>


    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#fff"
        android:textSize="12sp"
        android:textColor="#fff"
        android:alpha="0.7"
        android:letterSpacing="0.1"
        android:hint="@string/pseudo"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/email_address"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_user"
        android:id="@+id/imageView"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/email_address"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#fff"
        android:textSize="12sp"
        android:textColor="#fff"
        android:alpha="0.7"
        android:letterSpacing="0.1"
        android:hint="@string/pswd_hint"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/username"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_password"
        android:id="@+id/imageView"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/username"/>


    <EditText
        android:id="@+id/number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#fff"
        android:textSize="12sp"
        android:textColor="#fff"
        android:alpha="0.7"
        android:letterSpacing="0.1"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/password"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_inscription_call"
        android:id="@+id/imageView"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/password"/>



    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#fff"
        android:textSize="12sp"
        android:textColor="#fff"
        android:alpha="0.7"
        android:letterSpacing="0.1"
        android:hint="@string/location"
        android:inputType="textAutoComplete"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/number"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_inscription_location"
        android:id="@+id/imageView"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/number"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#50e3c2"
        android:id="@+id/button"
        android:layout_below="@+id/location"
        android:layout_marginTop="34dp"
        android:singleLine="true"
        android:text="@string/btn_new_user"
        android:textColor="#fff"
        android:textAllCaps="false"/>
</RelativeLayout>