<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.claire.mobileprojectspae06.">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:paddingTop="30dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:textColor="@color/white"
        android:alpha="0.7"
        android:textSize="16sp"
        android:letterSpacing="0.1"
        android:layout_gravity="center"
        android:gravity="center"
        android:singleLine="true"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/logo"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignStart="@+id/logo" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="198dp">
        <View
            android:id="@+id/myRectangleView"
            android:layout_width="181dp"
            android:layout_height="2dp"
            android:background="@drawable/rectangle">
        </View>
    </RelativeLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        android:layout_marginTop="40dp"
        android:letterSpacing="0.1"
        app:met_iconLeft="@drawable/icon_user"
        app:met_baseColor="@color/white"
        app:met_primaryColor="@color/colorApp"
        app:met_errorColor="#fa4444"
        app:met_underlineColor="@color/white"
        android:layout_below="@+id/relativeLayout"
        app:met_floatingLabel="normal" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:hint="@string/pswd_hint"
        android:inputType="textPassword"
        app:met_iconLeft="@drawable/icon_password"
        android:layout_below="@+id/email_address"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:letterSpacing="0.1"
        app:met_baseColor="@color/white"
        app:met_primaryColor="@color/colorApp"
        app:met_errorColor="#fa4444"
        app:met_underlineColor="@color/white"
        app:met_floatingLabel="normal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorApp"
        android:id="@+id/btn_login"
        android:layout_below="@+id/password"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="16dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textAllCaps="false"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00ffffff"
        android:id="@+id/btn_new_user"
        android:layout_below="@+id/btn_login"
        android:layout_centerInParent="true"
        android:layout_marginTop="34dp"
        android:singleLine="true"
        android:text="@string/btn_new_user"
        android:textColor="@color/white"
        android:textAllCaps="false" />

</RelativeLayout>
