<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.activities.UserRefugeActivity"
    tools:showIn="@layout/activity_user_refuge"
    android:background="@color/colorApp">

        <TextView
            android:id="@+id/refuge_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refuge_name_upcase"
            android:paddingTop="40dp"
            android:paddingBottom="14dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_location_blanc"
            android:id="@+id/imageView6"
            android:layout_marginStart="86dp"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:alpha="0.8"
            android:textSize="12sp"
            android:text="@string/refuge_address"
            android:id="@+id/textView4"
            android:layout_marginStart="22dp"
            android:layout_below="@+id/refuge_name"
            android:layout_toEndOf="@+id/imageView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:alpha="0.8"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        android:text="@string/refuge_city"
        android:layout_marginTop="3dp"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:id="@+id/textView5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_time_blanc"
        android:id="@+id/imageView7"
        android:layout_alignTop="@+id/textView6"
        android:layout_toStartOf="@+id/textView4"
        android:layout_marginTop="2dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refuge_schedule"
        android:alpha="0.8"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:id="@+id/textView6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:src="@drawable/icon_mail_blanc"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignEnd="@+id/imageView6"
        android:id="@+id/imageView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refuge_mail"
        android:alpha="0.8"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:id="@+id/textView7"
        android:autoLink="email"
        android:textColorLink="@color/white"/>


    <!--  GOOGLE MAPS HERE ! -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_itinerary_big"
        android:id="@+id/imageView10"
        android:layout_alignTop="@+id/imageView9"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginStart="5dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/btn_call_big"
        android:layout_marginTop="44dp"
        android:id="@+id/imageView9"
        android:layout_marginStart="7dp"
        android:layout_below="@+id/textView7"
        android:layout_toEndOf="@+id/imageView10" />

</RelativeLayout>
