<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.claire.mobileprojectspae06.UserProfile"
    android:background="#fafafa"
    tools:showIn="@layout/activity_user_profile">

    <ImageView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/img_user_charlotte"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username1"
        android:textColor="@color/colorApp"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        android:layout_alignTop="@+id/username"
        android:layout_toRightOf="@+id/username"
        android:layout_toEndOf="@+id/username"
        android:id="@+id/textView3" />

    <!-- pet's preference -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_user"
        android:background="@color/colorApp"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/username"
        android:layout_toEndOf="@+id/username"
        android:layout_marginTop="10dp"
        android:id="@+id/imageView" />

    <TextView
        android:id="@+id/favoritepet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritedog"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />


    <!-- user location -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_user"
        android:background="@color/colorApp"
        android:id="@+id/imageViewLocation"
        android:layout_alignBottom="@+id/username"
        android:layout_toRightOf="@+id/username"
        android:layout_toEndOf="@+id/username" />

    <TextView
        android:id="@+id/userlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/userlocation"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/imageViewLocation"
        android:layout_alignLeft="@+id/favoritepet"
        android:layout_alignStart="@+id/favoritepet" />


    <!-- notifications -->
    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/logo"
        android:layout_marginRight="20dp"
        android:id="@+id/snap"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <ImageView
        android:src="@drawable/img_youpi"
        android:background="@color/bgpet1"

        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_toLeftOf="@+id/imageViewLocation"
        android:layout_toStartOf="@+id/imageViewLocation" />

</RelativeLayout>
